[tool.poetry]
name = "tp-esigelec"
version = "0.1.0"
description = ""
authors = ["Antoine Provot <antoine.provot@orange.fr>"]
readme = "README.md"
packages = [{include = "tp_esigelec"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
cryptography = "^39.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
